external-crates/move/crates/move-compiler/tests/move_2024/parser/top_level_module_mixed_invalid_2.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_2024/parser/top_level_module_mixed_invalid_2.move:7:11
  │
7 │ module a::m;
  │           ^ Cannot define multiple 'module' forms in the same file if any is inlined.
  │
  = Either move each 'module' into its own file or define each as 'module <name> { contents }'

