external-crates/move/crates/move-compiler/tests/move_2024/parser/top_level_module_mixed_invalid_2.move
module a::n {

    public fun bar() { }

}

module a::m;

public fun foo() {
    a::n::bar();
}


